link SRC 2012 video properly

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <dd>A 42-slide, five minute lightining talk on the interactions between Ruby’s <code>Date</code> class and <code>Enumerable</code> module.</dd>
         <dd>Given at <a href='http://lightning.io'>Lightning IO</a> 2012.</dd>
 
-        <dt>Decoupling Persistence (Like There’s Some Tomorrow) | <a href='src-2012'>slides</a> | <a href='http://programme.scottishrubyconference.com/proposals/70/video'>video</a></dt>
+        <dt>Decoupling Persistence (Like There’s Some Tomorrow) | <a href='src-2012'>slides</a> | <a href='http://vimeo.com/55732986'>video</a></dt>
         <dd><cite>When I&nbsp;open up a&nbsp;Rails project and the models dir is full of 100% ActiveRecord classes I&nbsp;shudder. Model ≠ Persistence.</cite> — Ben Mabey</dd>
         <dd>From DCI to presenters, from Uncle Bob’s <a href='http://confreaks.com/videos/759'>architecture talk</a> and Avdi Grimm’s <cite><a href='http://objectsonrails.com'>Objects on Rails</a></cite> book to the proliferation of (competing? complementing?) database systems, it seems the time has come to seriously consider decoupling our objects’ persistence from the rest of the application.</dd>
         <dd>This talk – after describing the general vices of strong object/database coupling and the all-too-usual <code>rails&nbsp;g&nbsp;model</code>-driven development – covers the various approaches to separating the objects’ persistence layer, along with their virtues (cleaner, simpler tests! backend independence! no RDBMS-related shortcuts impacting the design!) and potential vices (performance? perceived compexity? YAGNI?).</dd>
