link Kod.io 2014 slides

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Fly, You Tools! | <a href='kodio-2014'>slides</a></dt>
+        <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
+        <dd>This talk covers some lesser known features of our everyday infrastructure – Git, PostgreSQL and command-line; tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
+        <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012 and <a href='http://linz.kod.io'>Kod.io</a> 2014.</dd>
+
         <dt>Standard Library, Uncommon Uses | <a href='http://stdlib-arrrrcamp-2013.herokuapp.com'>slides</a> | <a href='http://www.confreaks.com/videos/2702-arrrrcamp2013-standard-library-uncommon-uses'>video</a></dt>
         <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting <code>Enumerable</code>’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
         <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library – like GServer, DRb/Rinda, PStore, Ripper and SecureRandom – that do not require the installation of any gems and can be used in any environment hosting a Ruby implementation. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
@@ -90,11 +95,6 @@
         <dt>Teaching Ruby Basics | <a href='railsberry-2013'>slides</a></dt>
         <dd>A short lightning talk about lessons learned while teaching at Rails Girls Warsaw.</dd>
         <dd>Given at <a href='http://railsberry.com'>Railsberry</a> 2013.</dd>
-
-        <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
-        <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
-        <dd>This talk covers some lesser known features of our everyday infrastructure – Git, PostgreSQL and command-line; tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
-        <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
 
         <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a> | <a href='http://vimeo.com/album/2121090/video/51636332'>video</a></dt>
         <dd>Object persistence in Ruby is a&nbsp;tricky subject – everyone knows how to do it (‘simply use an ORM, plug it into a&nbsp;relational database and you’re done!’), most know the drawbacks (‘well, sure, you need to use a&nbsp;document database for the more schema-less cases… or serialise the variable parts… and, of course, object references need to be handled separately…’), but few experiment with alternatives.</dd>
