Kod.io 2014: make the slides sequence horizontal only

--- a/kodio-2014/index.html
+++ b/kodio-2014/index.html
@@ -50,12 +50,11 @@
         <section data-background='black' data-transition='none'><p><img style='width: 100%' src='img/74.png' /></p><p class='attribution'><i>The Lord of the Rings: The Fellowship of the Ring</i></p></section>
         <section data-background='black' data-transition='none'><p><img style='width: 100%' src='img/82.png' /></p><p class='attribution'><i>The Lord of the Rings: The Fellowship of the Ring</i></p></section>
         <section data-transition='none'><p><img style='width: 100%' src='img/fly_you_fools.jpg' /></p><p class='attribution'><a href='http://www.quickmeme.com/meme/3qh0s6'>quickmeme</a></p></section>
-        </section>
-        <section data-markdown='talk/talk.md'       data-separator='^\n\n\n' data-vertical='^\n\n'></section>
-        <section data-markdown='talk/git.md'        data-separator='^\n\n\n' data-vertical='^\n\n'></section>
-        <section data-markdown='talk/postgresql.md' data-separator='^\n\n\n' data-vertical='^\n\n'></section>
-        <section data-markdown='talk/cli.md'        data-separator='^\n\n\n' data-vertical='^\n\n'></section>
-        <section data-markdown='talk/links.md'      data-separator='^\n\n\n' data-vertical='^\n\n'></section>
+        <section data-markdown='talk/talk.md'       data-separator='^\n\n'></section>
+        <section data-markdown='talk/git.md'        data-separator='^\n\n'></section>
+        <section data-markdown='talk/postgresql.md' data-separator='^\n\n'></section>
+        <section data-markdown='talk/cli.md'        data-separator='^\n\n'></section>
+        <section data-markdown='talk/links.md'      data-separator='^\n\n'></section>
 			</div>
 
 		</div>
