fix ArrrrCamp spelling ♥

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <dt>Standard Library, Uncommon Uses | <a href='http://stdlib-arrrrcamp-2013.herokuapp.com'>slides</a> | <a href='http://www.confreaks.com/videos/2702-arrrrcamp2013-standard-library-uncommon-uses'>video</a></dt>
         <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting <code>Enumerable</code>’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
         <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library – like PStore, GServer, Abbrev, DRb and IPAddr – that do not require the installation of any gems and can be used in any environment hosting a Ruby implementation. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
-        <dd>Given at <a href='http://arrrrcamp.be'>Arrrrcamp</a> 2013.</dd>
+        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2013.</dd>
 
         <dt>They Hear Me Typin’, They Hatin’ | <a href='http://keyboards-eurucamp-2013.herokuapp.com'>slides</a></dt>
         <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
@@ -106,7 +106,7 @@
         <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a> | <a href='http://vimeo.com/album/2121090/video/51636332'>video</a></dt>
         <dd>Object persistence in Ruby is a&nbsp;tricky subject – everyone knows how to do it (‘simply use an ORM, plug it into a&nbsp;relational database and you’re done!’), most know the drawbacks (‘well, sure, you need to use a&nbsp;document database for the more schema-less cases… or serialise the variable parts… and, of course, object references need to be handled separately…’), but few experiment with alternatives.</dd>
         <dd>This talk, after recalling the popular database-driven persistence solutions, concentrates on the less known, but more interesting and often quite useful approaches – from file-based PStore (ideal for small apps), through Candy’s out-of-the-way magic, to MagLev’s true cross-process transparent object persistence.</dd>
-        <dd>Given at <a href='http://arrrrcamp.be'>Arrrrcamp</a> 2012.</dd>
+        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2012.</dd>
 
         <dt>Ruby on the Command-Line | <a href='eurucamp-2012'>slides</a></dt>
         <dd>Ruby, thanks to its various frameworks, is known to be the language for web applications – and recent developments in graphic libraries make it a&nbsp;worthy contestant in the world of GUI-driven desktop programs. But Ruby is also great for writing command-line applications; the ability to mix no-boilerplate top-level functions with full-fledged OOP means its usage can vary from one-off trivial scripts to complicated, option-heavy command-line powerhouses.</dd>
