--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt>Integration Tests are Bogus</dt>
+        <dt>Integration Tests are Bogus | <a href='wrocloverb-2014'>slides</a></dt>
         <dd>The Ruby community embraced testing early, with many developers switching full-time to test-driven development (and, more importantly, test-driven design); discovering the domain of a given problem and the mechanics required to make objects interact painlessly by implementing a system from outside in are oftentimes eye-opening experiences.</dd>
         <dd>Whether you like to write well-isolated (and fast!) unit tests or need to implement the outside of a system without having the inside nits-and-bolts in place beforehand there’s a plethora of stubbing and mocking libraries to choose from. Unfortunately, heavy mocking and stubbing comes with a cost: even with the most well-tested-in-isolation objects you can’t really say anything about their proper wirings without some integration and end-to-end tests – and writing the former is often not a very enjoyable experience.</dd>
         <dd>This talk covers a new player on the Ruby testing scene: <a href='https://github.com/psyho/bogus'>Bogus</a>, a library for stubbing, mocking and spying that goes the extra mile and verifies whether your fakes have any connection with reality – whether the faked methods exist on the actual object, whether they take the right number of arguments and even whether tests for a given class verify the behaviour that the class’s fakes pretend to have.</dd>
-        <dd>With Bogus quite a few of the <a href='http://www.infoq.com/presentations/integration-tests-scam'>famously derided integration tests</a> come for free; a change to a method’s name or its signature will make all of the related fakes complain, and all the missing pieces of a system written from outside in will present themselves ready to be implemented.</dd>
-        <dd>To be given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
+        <dd>With Bogus quite a few of the <a href='http://www.infoq.com/presentations/integration-tests-scam'>famously derided integration tests</a> come for free; a&nbsp;change to a method’s name or its signature will make all of the related fakes complain, and all the missing pieces of a system written from outside in will present themselves ready to be implemented.</dd>
+        <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
 
         <dt>Fly, You Tools! | <a href='kodio-2014'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
