link wroc_love.rb 2014 lightning talk

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>From Here to <del>Eternity</del> eurucamp | <a href='wrocloverb-2014-lt'>slides</a></dt>
+        <dd>A 43-slide, five minute lightining talk on the interactions between Ruby’s <code>Date</code> class and <code>Enumerable</code> module.</dd>
+        <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
+
         <dt>Integration Tests are Bogus | <a href='wrocloverb-2014'>slides</a></dt>
         <dd>The Ruby community embraced testing early, with many developers switching full-time to test-driven development (and, more importantly, test-driven design); discovering the domain of a given problem and the mechanics required to make objects interact painlessly by implementing a system from outside in are oftentimes eye-opening experiences.</dd>
         <dd>Whether you like to write well-isolated (and fast!) unit tests or need to implement the outside of a system without having the inside nits-and-bolts in place beforehand there’s a plethora of stubbing and mocking libraries to choose from. Unfortunately, heavy mocking and stubbing comes with a cost: even with the most well-tested-in-isolation objects you can’t really say anything about their proper wirings without some integration and end-to-end tests – and writing the former is often not a very enjoyable experience.</dd>
