--- a/wrocloverb-2014-lt/index.html
+++ b/wrocloverb-2014-lt/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>From Here to Eternity</title>
+  <title>From Here to Eternity^W eurucamp</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 
