link Kod.io 2014 video

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <dd>With Bogus quite a few of the <a href='http://www.infoq.com/presentations/integration-tests-scam'>famously derided integration tests</a> come for free; a&nbsp;change to a method’s name or its signature will make all of the related fakes complain, and all the missing pieces of a system written from outside in will present themselves ready to be implemented.</dd>
         <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
 
-        <dt>Fly, You Tools! | <a href='kodio-2014'>slides</a></dt>
+        <dt>Fly, You Tools! | <a href='kodio-2014'>slides</a> | <a href='http://confreaks.com/videos/3248-kodio_2014-fly-you-tools'>video</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
         <dd>This talk covers some lesser known features of our everyday infrastructure – Git, PostgreSQL and command-line; tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
         <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012 and <a href='http://linz.kod.io'>Kod.io</a> 2014.</dd>
