‘your links share strangely’, they said

--- a/wrocloverb-2014/index.html
+++ b/wrocloverb-2014/index.html
@@ -6,8 +6,8 @@
 
 		<title>Integration Tests are Bogus</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Integration Tests are Bogus">
+		<meta name="author" content="Piotr Szotkowski">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
