relative links, how do they work?

--- a/baruco-2014/index.html
+++ b/baruco-2014/index.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <link rel="stylesheet" href="/css/960.css" type="text/css"/>
+  <link rel="stylesheet" href="css/960.css" type="text/css"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Standard Library, Uncommon Uses</title>
 
@@ -11,80 +11,80 @@
 
   <!-- Set up the initial stylesheet -->
 
-  <link rel="stylesheet" href="/css/reset.css" type="text/css"/>
+  <link rel="stylesheet" href="css/reset.css" type="text/css"/>
 
   <!-- Required for the Syntax Highlighting of Code to Work -->
 
-  <link rel="stylesheet" href="/css/ghf_marked.css" type="text/css"/>
+  <link rel="stylesheet" href="css/ghf_marked.css" type="text/css"/>
 
-  <link rel="stylesheet" href="/css/themes/default.css" type="text/css"/>
-<link rel="stylesheet" href="/css/slide_formats.css" type="text/css"/>
+  <link rel="stylesheet" href="css/themes/default.css" type="text/css"/>
+<link rel="stylesheet" href="css/slide_formats.css" type="text/css"/>
 
-  <link rel="stylesheet" href="/css/mobile.css" type="text/css"/>
+  <link rel="stylesheet" href="css/mobile.css" type="text/css"/>
 
   <!-- JavaScript Powers This Ship! -->
 
-  <script type="text/javascript" src="/js/jquery-1.4.2.js"></script>
+  <script type="text/javascript" src="js/jquery-1.4.2.js"></script>
 
   <!-- The Parade JS uses a lot of publish and subscribe event structure -->
-  <script type="text/javascript" src="/js/jquery-pubsub.js"></script>
+  <script type="text/javascript" src="js/jquery-pubsub.js"></script>
 
   <!-- Provide a sane interface for defining keyboard events -->
-  <script type="text/javascript" src="/js/keyboard.js"></script>
+  <script type="text/javascript" src="js/keyboard.js"></script>
 
   <!-- Giving Structure to the Javascript - this powers a lot of the Parade
        code that is defined. -->
 
-  <script type="text/javascript" src="/js/spine.js"></script>
+  <script type="text/javascript" src="js/spine.js"></script>
 
   <!-- Slide Transition support provided by jquery-cycle ... -->
 
-  <script type="text/javascript" src="/js/jquery.cycle.all.js"></script>
+  <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
 
   <!-- Ensures that all images in the presentation have been loaded before
        the presentation is ready to start. -->
 
-  <script type="text/javascript" src="/js/jquery.batchImageLoad.js"></script>
+  <script type="text/javascript" src="js/jquery.batchImageLoad.js"></script>
 
-  <script type="text/javascript" src="/js/hammer.js"></script>
+  <script type="text/javascript" src="js/hammer.js"></script>
 
   <!-- Results from the live executed code is powered by this little js -->
-  <script type="text/javascript" src="/js/jquery-print.js"></script>
+  <script type="text/javascript" src="js/jquery-print.js"></script>
 
 
   <!-- Provides Command-Line Console Example Support -->
-  <script type="text/javascript" src="/js/jTypeWriter.js"></script>
+  <script type="text/javascript" src="js/jTypeWriter.js"></script>
 
   <!-- Provides Executable CoffeeScript Support -->
 
-  <script type="text/javascript" src="/js/coffee-script.js"></script>
+  <script type="text/javascript" src="js/coffee-script.js"></script>
 
   <!-- Provides the command visor functionality to parade -->
 
-  <script type="text/javascript" src="/js/jquery-terminal.js"></script>
+  <script type="text/javascript" src="js/jquery-terminal.js"></script>
 
   <!-- Core Parade Library Code -->
 
-  <script type="text/javascript" src="/js/parade.js"></script>
-  <script type="text/javascript" src="/js/parade-code-execution.js"></script>
+  <script type="text/javascript" src="js/parade.js"></script>
+  <script type="text/javascript" src="js/parade-code-execution.js"></script>
 
-  <script type="text/javascript" src="/js/parade-keyboard-input.js"></script>
+  <script type="text/javascript" src="js/parade-keyboard-input.js"></script>
 
-  <script type="text/javascript" src="/js/parade-command-input.js"></script>
-  <script type="text/javascript" src="/js/parade-command-visor.js"></script>
-  <script type="text/javascript" src="/js/parade-mobile.js"></script>
+  <script type="text/javascript" src="js/parade-command-input.js"></script>
+  <script type="text/javascript" src="js/parade-command-visor.js"></script>
+  <script type="text/javascript" src="js/parade-mobile.js"></script>
 
   <!-- Powers the Table of Contents Menu - this allows you to move through
        the slides  -->
 
-  <script type="text/javascript" src="/js/fg.menu.js"></script>
-  <link rel="stylesheet" href="/css/fg.menu.css" type="text/css"/>
-<link rel="stylesheet" href="/css/jquery-ui/ui.all.css" type="text/css"/>
-<link rel="stylesheet" href="/css/jquery-terminal.css" type="text/css"/>
+  <script type="text/javascript" src="js/fg.menu.js"></script>
+  <link rel="stylesheet" href="css/fg.menu.css" type="text/css"/>
+<link rel="stylesheet" href="css/jquery-ui/ui.all.css" type="text/css"/>
+<link rel="stylesheet" href="css/jquery-terminal.css" type="text/css"/>
 
   
   
-  <link rel="stylesheet" href="/css/parade.css" type="text/css"/>
+  <link rel="stylesheet" href="css/parade.css" type="text/css"/>
 
   
   
