link BaRuCo 2014 talk

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Standard Library, Uncommon Uses | <a href='baruco-2014'>slides</a> | <a href='http://www.confreaks.com/videos/2702-arrrrcamp2013-standard-library-uncommon-uses'>video</a></dt>
+        <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting <code>Enumerable</code>’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
+        <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library – like PStore, GServer, Abbrev, DRb and IPAddr – that do not require the installation of any gems and can be used in any environment hosting a Ruby implementation. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
+        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2013, to be given at <a href='http://baruco.org'>BaRuCo</a> 2014.</dd>
+
         <dt>From Here to <del>Eternity</del> eurucamp | <a href='wrocloverb-2014-lt'>slides</a></dt>
         <dd>A 43-slide, five minute lightining talk on the interactions between Ruby’s <code>Date</code> class and <code>Enumerable</code> module.</dd>
         <dd>Given at <a href='http://wrocloverb.com'>wroc_love.rb</a> 2014.</dd>
@@ -87,11 +92,6 @@
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
         <dd>This talk covers some lesser known features of our everyday infrastructure – Git, PostgreSQL and command-line; tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
         <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012 and <a href='http://linz.kod.io'>Kod.io</a> 2014.</dd>
-
-        <dt>Standard Library, Uncommon Uses | <a href='http://stdlib-arrrrcamp-2013.herokuapp.com'>slides</a> | <a href='http://www.confreaks.com/videos/2702-arrrrcamp2013-standard-library-uncommon-uses'>video</a></dt>
-        <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting <code>Enumerable</code>’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
-        <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library – like PStore, GServer, Abbrev, DRb and IPAddr – that do not require the installation of any gems and can be used in any environment hosting a Ruby implementation. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
-        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2013.</dd>
 
         <dt>They Hear Me Typin’, They Hatin’ | <a href='http://keyboards-eurucamp-2013.herokuapp.com'>slides</a></dt>
         <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
