--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <dt>Standard Library, Uncommon Uses | <a href='baruco-2014'>slides</a> | <a href='http://www.confreaks.com/videos/2702-arrrrcamp2013-standard-library-uncommon-uses'>video</a></dt>
         <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting <code>Enumerable</code>’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
         <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library – like PStore, GServer, Abbrev, DRb and IPAddr – that do not require the installation of any gems and can be used in any environment hosting a Ruby implementation. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
-        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2013, to be given at <a href='http://baruco.org'>BaRuCo</a> 2014.</dd>
+        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2013 and <a href='http://baruco.org'>BaRuCo</a> 2014.</dd>
 
         <dt>From Here to <del>Eternity</del> eurucamp | <a href='wrocloverb-2014-lt'>slides</a></dt>
         <dd>A 43-slide, five minute lightining talk on the interactions between Ruby’s <code>Date</code> class and <code>Enumerable</code> module.</dd>
