ArrrrCamp 2014: work in (heavy) progress

--- a/arrrrcamp-2014/index.html
+++ b/arrrrcamp-2014/index.html
@@ -42,7 +42,18 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-        <section data-markdown='talk/cover.md' data-separator='^\n\n'></section>
+        <section data-markdown='talk/intro.md'       data-separator='^\n\n'></section>
+        <section data-markdown='talk/ansible.md'     data-separator='^\n\n'></section>
+        <section data-markdown='talk/system.md'      data-separator='^\n\n'></section>
+        <section data-markdown='talk/shellwords.md'  data-separator='^\n\n'></section>
+        <section data-markdown='talk/open3.md'       data-separator='^\n\n'></section>
+        <section data-markdown='talk/io-console.md'  data-separator='^\n\n'></section>
+        <section data-markdown='talk/shell_recap.md' data-separator='^\n\n'></section>
+        <!-- <section data-markdown='talk/tempfile.md'    data-separator='^\n\n'></section> -->
+        <section data-markdown='talk/etc.md'         data-separator='^\n\n'></section>
+        <!-- <section data-markdown='talk/tsort.md'       data-separator='^\n\n'></section> -->
+        <section data-markdown='talk/weakref.md'     data-separator='^\n\n'></section>
+        <section data-markdown='talk/outro.md'       data-separator='^\n\n'></section>
 			</div>
 
 		</div>
