--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <dl>
         <dt>Weak References Strongly Held | <a href='arrrrcamp-2014'>slides</a>
         <dd>Ruby’s standard library is full of little-known… well, gems of interesting code – which might not be needed on a daily basis, but are super-useful when required. From <code>continuation</code> and <code>etc</code> to <code>tsort</code> and <code>weakref</code>, learning about them means not only they might save you one day, but also make you a better developer (even if by researching the question ‘why on Earth would anyone package such a thing…?’ Come and learn about the libraries you’re already using!
-        <dd>To be given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2014.</dd>
+        <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2014.</dd>
 
         <dt>Standard Library, Uncommon Uses | <a href='baruco-2014'>slides</a> | <a href='http://www.confreaks.com/videos/2702-arrrrcamp2013-standard-library-uncommon-uses'>video</a></dt>
         <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting <code>Enumerable</code>’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
