--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a>
+        <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
+        <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
+        <dd>To be given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
+
         <dt>Weak References Strongly Held | <a href='arrrrcamp-2014'>slides</a>
         <dd>Ruby’s standard library is full of little-known… well, gems of interesting code – which might not be needed on a daily basis, but are super-useful when required. From <code>continuation</code> and <code>etc</code> to <code>tsort</code> and <code>weakref</code>, learning about them means not only they might save you one day, but also make you a better developer (even if by researching the question ‘why on Earth would anyone package such a thing…?’ Come and learn about the libraries you’re already using!
         <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2014.</dd>
