--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
         <dd>Given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
 
-        <dt>Weak References Strongly Held | <a href='arrrrcamp-2014'>slides</a>
+        <dt>Weak References Strongly Held | <a href='arrrrcamp-2014'>slides</a> | <a href='http://confreaks.com/videos/4795-arrrrcamp2014-weak-references-strongly-held'>video</a></dt>
         <dd>Ruby’s standard library is full of little-known… well, gems of interesting code – which might not be needed on a daily basis, but are super-useful when required. From <code>continuation</code> and <code>etc</code> to <code>tsort</code> and <code>weakref</code>, learning about them means not only they might save you one day, but also make you a better developer (even if by researching the question ‘why on Earth would anyone package such a thing…?’ Come and learn about the libraries you’re already using!
         <dd>Given at <a href='http://arrrrcamp.be'>ArrrrCamp</a> 2014.</dd>
 
