--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Hacking on <code>reek</code> | <a href='rossconf-2015'>slides</a>
+        <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
+        <dd>To be given at <a href='http://rossconf.io'>ROSSConf Vienna</a> 2015.</dd>
+
         <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
