RUG::B: less fraktur

--- a/rugb-2015-08/index.html
+++ b/rugb-2015-08/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reek: 𝖊𝖎𝖓 𝕭𝖑𝖎𝖙𝖟𝖌𝖊𝖘𝖕𝖗𝖆̈𝖈𝖍</title>
+		<title>reek: ein Blitzgespräch</title>
 
-		<meta name="description" content="reek: 𝖊𝖎𝖓 𝕭𝖑𝖎𝖙𝖟𝖌𝖊𝖘𝖕𝖗𝖆̈𝖈𝖍">
+		<meta name="description" content="ein Blitzgespräch">
 		<meta name="author" content="Piotr Szotkowski">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
