link RUG::B August 2015 talk

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt><code>reek</code>: ein Blitzgespräch | <a href='rugb-2015-08'>slides</a>
+        <dd>A lightning talk on <code>reek</code>.</dd>
+        <dd>To be given at <a href='http://http://www.rug-b.de'>RUG::B</a>, August 2015.</dd>
+
         <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
         <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015.</dd>
