--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <dl>
         <dt><code>reek</code>: ein Blitzgespräch | <a href='rugb-2015-08'>slides</a>
         <dd>A lightning talk on <code>reek</code>.</dd>
-        <dd>To be given at <a href='http://http://www.rug-b.de'>RUG::B</a>, August 2015.</dd>
+        <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a>, August 2015.</dd>
 
         <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
