index: add missing </dt> tags

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt><code>reek</code>: ein Blitzgespräch | <a href='rugb-2015-08'>slides</a>
+        <dt><code>reek</code>: ein Blitzgespräch | <a href='rugb-2015-08'>slides</a></dt>
         <dd>A lightning talk on <code>reek</code>.</dd>
         <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a>, August 2015.</dd>
 
-        <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a>
+        <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a></dt>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
         <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015.</dd>
 
@@ -84,7 +84,7 @@
         <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
         <dd>Given at <a href='http://rossconf.io'>ROSSConf Vienna</a> 2015.</dd>
 
-        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a>
+        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a></dt>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
         <dd>Given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
