link eurucamp 2015 lightning talk video

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <dd>A lightning talk on <code>reek</code>.</dd>
         <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a>, August 2015.</dd>
 
-        <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a></dt>
+        <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a> | <a href='https://www.youtube.com/watch?v=mJcxAY172y8#t=15m35s'>video</a></dt>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
         <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015.</dd>
 
