link BaRuCo 2015 lightning talk

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt><code>reek</code>: ein Blitzgespräch | <a href='rugb-2015-08'>slides</a></dt>
+        <dt><code>reek</code>: una xerrada llampec / ein Blitzgespräch | <a href='baruco-2015-lt'>BaRuCo</a> / <a href='rugb-2015-08'>RUG::B</a> slides</dt>
         <dd>A lightning talk on <code>reek</code>.</dd>
-        <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a>, August 2015.</dd>
+        <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a> August 2015 and <a href='http://baruco.org'>BaRuCo</a> 2015.</dd>
 
         <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a> | <a href='https://www.youtube.com/watch?v=mJcxAY172y8#t=15m35s'>video</a></dt>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
