--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Ruby Smells | <a href='rubyconf-pt-2015'>slides</a></dt>
+        <dd>Writing good object-oriented code is hard: object boundaries are not always as clear-cut as we’d like, their responsibilities and reasons to change tend to grow over time, inter-object coupling makes isolated testing complicated – and emergency refactorings are tiresome, gnarly and seem to always happen too late. At the same time it’s often hard to see the exact moment when a simple refactoring would save a given class from taking the wrong turn, and real-life projects tend to have real-life <a href='https://twitter.com/lunivore/status/301007423106322434'>sadlines</a> with their tireless chants of ‘let’s refactor this in the <em>next</em> sprint’.</dd>
+        <dd>Ruby’s dynamism means static code analysis is tricky (to say the least), but tools like <a href='https://github.com/bbatsov/rubocop'>RuboCop</a> and <a href='https://github.com/troessner/reek'><code>reek</code></a> bravely show it’s not impossible. This talk shows how to effectively use such tools, make informed decisions on when and how to refactor, and – most importantly – learn over time to spot potential code smells right when they’re introduced.</dd>
+        <dd>To be given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2015.</dd>
+
         <dt><code>reek</code>: una xerrada llampec / ein Blitzgespräch | <a href='baruco-2015-lt'>BaRuCo</a> / <a href='rugb-2015-08'>RUG::B</a> slides</dt>
         <dd>A lightning talk on <code>reek</code>.</dd>
         <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a> August 2015 and <a href='http://baruco.org'>BaRuCo</a> 2015.</dd>
@@ -87,7 +92,7 @@
         <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a></dt>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
-        <dd>Given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
+        <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
 
         <dt>Weak References Strongly Held | <a href='arrrrcamp-2014'>slides</a> | <a href='http://confreaks.com/videos/4795-arrrrcamp2014-weak-references-strongly-held'>video</a></dt>
         <dd>Ruby’s standard library is full of little-known… well, gems of interesting code – which might not be needed on a daily basis, but are super-useful when required. From <code>continuation</code> and <code>etc</code> to <code>tsort</code> and <code>weakref</code>, learning about them means not only they might save you one day, but also make you a better developer (even if by researching the question ‘why on Earth would anyone package such a thing…?’ Come and learn about the libraries you’re already using!
