hey, look what got published ♥

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
         <dd>Given at <a href='http://rossconf.io'>ROSSConf Vienna</a> 2015.</dd>
 
-        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a></dt>
+        <dt>Ruby’s Gems | <a href='rubyconf-pt-2014'>slides</a> | <a href='https://www.youtube.com/watch?v=kYW2QssYiJI'>video</a></dt>
         <dd>The Ruby ecosystem is known for its plethora of gems (and – sadly only a few – of its standard libraries), but the base interpreter itself is a treasure trove with small, beautiful jewels of pleasant syntax and fairly unknown, but elegant solutions that spring to help in the most surprising circumstances.</dd>
         <dd>This talk covers some of the lesser known pieces of Ruby’s core (think ‘obscure, but highly-useful-when-applicable Enumerable methods’), syntax and general language ideas like callables and case matching. Come and see how Ruby can help you before the first require!</dd>
         <dd>Given at <a href='http://2014.rubyconf.pt'>RubyConf Portugal</a> 2014.</dd>
