--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <dt>Ruby Smells | <a href='rubyconf-pt-2015'>slides</a> | <a href='https://www.youtube.com/watch?v=ZzqOuHI5MkA'>video</a></dt>
         <dd>Writing good object-oriented code is hard: object boundaries are not always as clear-cut as we’d like, their responsibilities and reasons to change tend to grow over time, inter-object coupling makes isolated testing complicated – and emergency refactorings are tiresome, gnarly and seem to always happen too late. At the same time it’s often hard to see the exact moment when a simple refactoring would save a given class from taking the wrong turn, and real-life projects tend to have real-life <a href='https://twitter.com/lunivore/status/301007423106322434'>sadlines</a> with their tireless chants of ‘let’s refactor this in the <em>next</em> sprint’.</dd>
         <dd>Ruby’s dynamism means static code analysis is tricky (to say the least), but tools like <a href='https://github.com/bbatsov/rubocop'>RuboCop</a> and <a href='https://github.com/troessner/reek'><code>reek</code></a> bravely show it’s not impossible. This talk shows how to effectively use such tools, make informed decisions on when and how to refactor, and – most importantly – learn over time to spot potential code smells right when they’re introduced.</dd>
-        <dd>Given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2015.</dd>
+        <dd>Given at <a href='http://rubyconf.pt'>RubyConf Portugal</a> 2015, <a href='http://wrug.eu'>Warsaw Ruby Users Group</a> December 2015 and <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 (<a href='/pivorak-2016-02/'>slides</a>).</dd>
 
         <dt><code>reek</code>: una xerrada llampec / ein Blitzgespräch | <a href='baruco-2015-lt'>BaRuCo</a> / <a href='rugb-2015-08'>RUG::B</a> slides</dt>
         <dd>A lightning talk on <code>reek</code>.</dd>
@@ -83,7 +83,7 @@
 
         <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a> | <a href='https://www.youtube.com/watch?v=mJcxAY172y8#t=15m35s'>video</a></dt>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
-        <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015.</dd>
+        <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015 and <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 (<a href='/pivorak-2016-02-lt/'>slides</a>).</dd>
 
         <dt>Hacking on <code>reek</code> | <a href='rossconf-2015'>slides</a> | <a href='https://www.youtube.com/watch?v=OuiiBhyKBKc'>video</a></dt>
         <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
