Bits of Ruby: link Pivorak video

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a> | <a href='https://www.youtube.com/watch?v=mJcxAY172y8#t=15m35s'>video</a></dt>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
-        <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015 and <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 (<a href='/pivorak-2016-02-lt/'>slides</a>).</dd>
+        <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015 and <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 (<a href='/pivorak-2016-02-lt/'>slides</a>, <a href='https://www.youtube.com/watch?v=xqTeiuX0fCM'>video</a>).</dd>
 
         <dt>Hacking on <code>reek</code> | <a href='rossconf-2015'>slides</a> | <a href='https://www.youtube.com/watch?v=OuiiBhyKBKc'>video</a></dt>
         <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
