--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <dd>A lightning talk on <code>reek</code>.</dd>
         <dd>Given at <a href='http://http://www.rug-b.de'>RUG::B</a> August 2015 and <a href='http://baruco.org'>BaRuCo</a> 2015.</dd>
 
-        <dt>Bits of Ruby | <a href='eurucamp-2015-lt'>slides</a> | <a href='https://www.youtube.com/watch?v=mJcxAY172y8#t=15m35s'>video</a></dt>
+        <dt>Bits of Ruby | <a href='pivorak-2016-02-lt'>slides</a> | <a href='https://www.youtube.com/watch?v=xqTeiuX0fCM'>video</a></dt>
         <dd>A lightning talk on <code>Integer#[]</code> and population count.</dd>
-        <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015 and <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 (<a href='/pivorak-2016-02-lt/'>slides</a>, <a href='https://www.youtube.com/watch?v=xqTeiuX0fCM'>video</a>).</dd>
+        <dd>Given at <a href='http://2015.eurucamp.org'>eurucamp</a> 2015 (<a href='eurucamp-2015-lt'>slides</a>, <a href='https://www.youtube.com/watch?v=mJcxAY172y8#t=15m35s'>video</a>), <a href='http://www.meetup.com/ruby-lviv/'>Pivorak</a> February 2016 and <a href='http://wrug.eu'>Warsaw Ruby Users Group</a>, June 2016 (<a href='wrug-2016-06'>slides</a>).</dd>
 
         <dt>Hacking on <code>reek</code> | <a href='rossconf-2015'>slides</a> | <a href='https://www.youtube.com/watch?v=OuiiBhyKBKc'>video</a></dt>
         <dd>A short introduction to <a href='https://github.com/troessner/reek'><code>reek</code></a> concentrating on contribution possibilities.</dd>
