header/footer fixes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       }
 
       div {
+        clear:              both;
         border:             1px solid #999;
         background-color:   white;
         box-shadow:         #999 0 0 30px;
@@ -86,11 +87,11 @@
 
   <body>
     <header>
-      <p>⚛ + ⌨ = ⚙</p>
-      <h1><a href='/'>chastell.net</a></h1>
       <nav>
         <ul>
-          <li><a href='/1/125/' title='½ million pixels'>1 / 125</a></li>
+          <li><a href='//chastell.net' title='root'>chastell.net</a></li>
+          <li>⚛ + ⌨ = ⚙</li>
+          <li><a href='//chastell.net/1/125/' title='½ million pixels'>1 / 125</a></li>
           <li><a href='//talks.chastell.net' title='look at all the talks I give'>talks</a></li>
         </ul>
       </nav>
@@ -201,7 +202,7 @@
       </dl>
     </div>
     <footer>
-      <p><a href='https://chastell.net/about/'>designed by chastell in Mazovia</a></p>
+      <p><a href='//chastell.net/about/'>designed by chastell in Mazovia</a></p>
     </footer>
   </body>
 </html>
